# bts_prediction_market

./: README.md  docker-compose.yml
server/: Dockerfile  README.md  pyproject.toml
server/app/: main.py
server/app/routers/: players.py
