[tool.poetry]
name = "bts_server"
version = "0.1.0"
description = "Server for prediction market aimed at winning MLBs Beat The Streak fantasy game"

license = "MIT"

authors = [
    "Michael Recachinas <mike@recachinas.dev>",
	"Kyle Johnson <>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/kyjohnso/bts_prediction_market"
homepage = "https://github.com/kyjohnso/bts_prediction_market"

keywords = ['mlb', 'bts', 'baseball']

[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here
toml = "^0.9"
# Dependencies with extras
requests = { version = "^2.13", extras = [ "security" ] }
# Python specific dependencies with prereleases allowed
pathlib2 = { version = "^2.2", python = "~2.7", allow-prereleases = true }
# Git dependencies
cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

# Optional dependencies (extras)
pendulum = { version = "^1.4", optional = true }
uvicorn = "^0.11.2"
fastapi = "^0.47.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
black = "^19.10b0"

[tool.poetry.scripts]
my-script = 'my_package:main'
